# batch-file-renamer

./: .gitignore  README.md  app_layout.py  app_main_window.py  extension_checkbox.py  main.py  pyproject.toml  renamer.py  renamer_layout.py  renamer_main_window.py
app/: main.py
app/core/: models.py  renamer.py  worker.py
app/gui/: app_layout.py  app_main_window.py  extension_checkbox.py
core/: renamer.py
gui/: __init__.py  app_layout.py  app_main_window.py  extension_checkbox.py
tests/test_core/: test_renamer.py
