[tool.poetry]
name = "batch-file-renamer"
version = "0.1.0"
description = ""
authors = ["Artur T. Małas"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
PyQt6 = "^6.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
isort = "^5.13.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
