[project]
name = "batch-file-renamer"
authors = [{name = "Artur T. Małas"}]
description = ""
license = "LGPL-3.0-only"

[tool.poetry]
name = "batch-file-renamer"
version = "0.3.0"
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
PySide6 = "^6.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
isort = "^5.13.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
